<resources>
    <string name="app_name">News App</string>
    <string name="no_news">"Currently there are no stories for you.\nPlease come back later and try again."</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_search_article_default" translatable="false">android</string>
    <string name="settings_search_article_key" translatable="false">q</string>
    <string name="settings_search_article_label">Searching for articles</string>

    <string name="settings_page_size_default" translatable="false">5</string>
    <string name="settings_page_size_key" translatable="false">page_size</string>
    <string name="settings_page_size_label">Number of news displayed</string>

    <string name="settings_from_date_default" translatable="false">2018-05-01</string>
    <string name="settings_from_date_key" translatable="false">date</string>
    <string name="settings_from_date_label">Date from when to display news</string>

    <string name="settings_order_by_label">Sorting method</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

</resources>
