<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_search_article_default"
        android:inputType="text"
        android:key="@string/settings_search_article_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_search_article_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_page_size_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_page_size_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_page_size_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_from_date_default"
        android:inputType="date"
        android:key="@string/settings_from_date_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_from_date_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

</PreferenceScreen>